--- a/posts/correlation-check-assumptions/index.qmd
+++ b/posts/correlation-check-assumptions/index.qmd
@@ -435,3 +435,18 @@ In summary, **case I looks like a reasonable case for Pearson Correlation,** whi
 This is a manufactured case that may not reflect common real-world data situations, but is hopefully useful in understanding how to **think critically about Pearson correlation** - including using visual and statistical methods to determine how applicable/reliable/representative Pearson correlation may be in any given situation.
 
 This highlights the importance of understanding **correlation as a summary statistic** that can only tell you so much about the relationships in the data - and in some cases, nothing at all. At the end of the day, if the correlation coefficient can't tell you something about what to expect from the dependent variable when the independent variable changes, it is not helpful. As such, it is **best used within early stages of exploratory analysis**, supplemented by visualization (at minimum), pointing the way toward potential further analysis, and **not as a final conclusion**.
+
+### Bonus: What to do when Pearson Correlation fails?
+
+If visualization and/or addition assumption checks suggest that Pearson Correlation is not a good statistic for your dataset, what to do? It depends on the characteristics of the data, and is a more involved conversation for another day, but here are some thought-starters:
+
+-   **Data transformation, such as log**: transforming the data can be a way to bring it more into line with the required assumptions of Pearson Correlation (or other technique being used). Log, Square Root, Inverse, Box-Cox are among potential transformations to try, although they tend to make interpretation more complex.
+-   **Spearman's Rank Correlation**: doesn't assume linear relationship; can be useful when both variables tend to increase, but not necessarily constant rate.
+-   **Kendall's Tau:** similar to Spearman's but more robust for small sample sizes.
+-   **Mutual information**: measures amount of information obtained about one variable through the other; applies beyond linear relationships.
+-   **Generalized Additive Models (GAMs)**: allow for flexibility in specifying the form of relationship between variables, accomodating complex patterns.
+-   **Quantile Regression**: can be relevant for exploring how variables vary across different points of the distribution of the dependent variable.
+-   **Regression Trees / Random Forests**: can be effective in identifying complex interactions and non-linear relationships, handling multiple predictors and their interactions.
+-   data transformation:
+
+Of course, each of these come with their own set of assumptions and conditions to take into account before making a selection.
